<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_regist_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:alpha="1"
            android:text="@string/username"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_regist_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regist_username"
            app:startIconDrawable="@drawable/ic_person_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_regist_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_regist_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:alpha="1"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout_regist_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_regist_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regist_email"
            app:startIconDrawable="@drawable/ic_email_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_regist_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="1"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout_regist_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_regist_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regist_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password_black">

            <com.zackyfaqia.ingstagram.util.CustomPasswordEditText
                android:id="@+id/edt_regist_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/register"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_layout_regist_password"
            app:layout_constraintStart_toStartOf="@+id/edt_layout_regist_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout_regist_password" />

        <TextView
            android:id="@+id/tv_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_acc"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <Button
            android:id="@+id/btn_goto_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_have_acc" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btn_goto_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>