<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/edt_layout_login_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_email"
            app:startIconDrawable="@drawable/ic_email_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="1"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout_login_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password_black">

            <com.zackyfaqia.ingstagram.util.CustomPasswordEditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_layout_login_password"
            app:layout_constraintStart_toStartOf="@+id/edt_layout_login_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout_login_password" />

                <TextView
                    android:id="@+id/tv_no_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_acc"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="@+id/btn_login"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <Button
            android:id="@+id/btn_goto_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/register"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_acc" />

        <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_goto_regist"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>